# design-by-contract

./: --pylintrc  .gitignore  .pre-commit-config.yaml  Readme.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_pages.yaml  pull_requests.yaml  release.yaml
_modules/: decorator.html  design_by_contract.html  index.html
_sources/: index.md.txt
_static/: documentation_options.js
doc/: conf.py
example/: pyproject.toml
example/doc/: conf.py  index.rst
example/doc/API/: example.rst
example/src/: example.py
example/src/example/: __init__.py
example/src/example/templates/: dbc.j2
example/src/templates/: dbc.j2
src/: design_by_contract.py
src/design_by_contract/: __init__.py  decorators.py  variables.py
tests/: test_contracts.py  test_dbc.py  test_decorators.py  test_variables.py
