[tool.poetry]
name = "design-by-contract"
version = "0.4.0"
description = "Handy decorator to define contracts with dependency injection in Python 3.10 and above"
license = "MIT"
repository = "https://github.com/StefanUlbrich/design-by-contract"
readme = "Readme.md"
authors = ["Stefan Ulbrich"]


classifiers = [
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]

include = ["license.txt"]

[tool.poetry.dependencies]
python = "^3.10"
asttokens = { version = "^2.0.5", optional = true }
Jinja2 = {version = "^3.1.2", optional = true}

[tool.poetry.dev-dependencies]
numpy = "^1.23.1"
pandas = "^1.4.0"
pylint = "^2.12.1,!=2.12.2"
black = "^22.3.0"
mypy = "0.971"
pytest = "^6.2.5"
ipykernel = "^6.9.1"
sphinx-book-theme = "^0.2.0"
myst-parser = "^0.17.0"
pre-commit = "^2.17.0"

[tool.poetry.extras]
docstrings = ["asttokens"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
namespace_packages = true
mypy_path = "src"
show_error_codes = true
strict = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[[tool.mypy.overrides]]
module = "asttokens.*"
ignore_missing_imports = true

[tool.black]
line-length = 120
target_version = ["py310"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-module-docstring"]

[tool.pylint.basic]
good-names = ['R', 'i', 'j', 'k', 'ex', 'Run', '_']
