[tool.poetry]
name = "example"
version = "0.1.0"
description = "An example for design-by-contract"
authors = ["Stefan Ulbrich"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
design-by-contract = "^0.3.1"
numpy = "^1.23.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
good-names = ['R', 'i', 'j', 'k', 'ex', 'Run', '_']

[tool.black]
line-length = 120
target_version = ["py310"]
